--- a/generator-project/index.html
+++ b/generator-project/index.html
@@ -9,7 +9,12 @@
  <script>//our own jQuery
    $(function(){
        $('h1').css('text-align', 'center');
-       
+       var Business Name
+ var Your Name
+  var Color Of Card
+   var Phone Number
+    var Business Phrase
+  var logos
      
    });
  </script>
