--- a/generator-project/index.html
+++ b/generator-project/index.html
@@ -1,35 +1,53 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title> jQuery template</title>
- <script
-  src="https://code.jquery.com/jquery-3.3.1.js"></script>
 
- <script>//our own jQuery
-   $(function(){
-       $('h1').css('text-align', 'center');
-       var Business Name
- var Your Name
-  var Color Of Card
-   var Phone Number
-    var Business Phrase
-  var logos
-     
-   });
- </script>
-  </head>
-  <body>
-  <h1> Create Your Business Card</h1>
-  Business Name: <input id="business"><br>
-  Your Name: <input id="name"><br>
-  Color Of Card: <input id="color"><br>
-   Phone Number: <input id="number"><br>
-    Business Phrase: <input id="phrase"><br>
-   Logos: <input type = "checkbox" name = "logo-1" value = "apple">Apple<br> 
-   <input type = "checkbox" name = "logo-2" value = "microsoft">Microsoft<br>
-    <input type = "checkbox" name = "logo-2" value = "nike">Nike<br>
+<head>
+ <meta charset="UTF-8">
+ <title> Generator Project</title>
+ <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+
+ <script>
+  //our own jQuery
+  $(function() {
+   $('h1').css('text-align', 'center');
    
-  <button>Create Card</button>
-  </body>
+   $('button').click(function(){
+   var business = $('#business').val();
+   var name = $('#name').val();
+   var color = $('#color').val();
+   var number = $('#number').val();
+   var phrase = $('#phrase').val();
+  
+ 
+ var box = business + name + number + phrase + color;
+console.log(box)
+$('p').html(box);
+
+ });
+  });
+ </script>
+  <style>
+   div {
+      background-color: black;
+    border: 5px solid black;
+    padding: 10px;
+    position: absolute;
+    width: 108px;
+    top: 0px;
+    left: 0;
+    box-shadow: 10px 1px;
+    }
+  </style>
+</head>
+
+<body>
+ <h1> Create Your Business Card</h1>
+ Business Name: <input id="business"><br> Your Name: <input id="name"><br> 
+ Color Of Card: <input id="color"><br> Phone Number: <input id="number"><br> 
+ Business Phrase: <input id="phrase"><br> 
+ 
+<p> </p>
+ <button>Create Card</button>
+</body>
+
 </html>
