input under button

--- a/generator-project/index.html
+++ b/generator-project/index.html
@@ -21,14 +21,14 @@
  
  var box = business + name + number + phrase + color;
 console.log(box)
-$('p').html(box);
+$('h2').html(box);
 
  });
   });
  </script>
   <style>
    div {
-      background-color: black;
+    background-color: black;
     border: 5px solid black;
     padding: 10px;
     position: absolute;
@@ -45,9 +45,9 @@ $('p').html(box);
  Business Name: <input id="business"><br> Your Name: <input id="name"><br> 
  Color Of Card: <input id="color"><br> Phone Number: <input id="number"><br> 
  Business Phrase: <input id="phrase"><br> 
- 
-<p> </p>
  <button>Create Card</button>
+<h2> </h2>
+
 </body>
 
 </html>
